--- a/siteDesafio/style.css
+++ b/siteDesafio/style.css
@@ -2,14 +2,16 @@ body {
 margin: 0;
 padding: 0;
 line-height: 20px;
-background-color: #892CDC;
+background-color: #faf6ed;
 }
 ul{
   list-style: none;
+  display: flex;
+  padding-left: 30px;
 }
 
 header {
-background-color: #3e4346 ;
+background-color: #221e1f;
 display: flex;
 flex-direction: row;
 max-height: 100px;
@@ -37,7 +39,6 @@ img.logo {
   max-width: 95px;
   margin-left: 5px;
   margin-right: 0px;
-  border: 2px solid #5a1d50;
   border-radius: 50%;
   margin: auto;
 }
@@ -53,3 +54,24 @@ img.logo {
   border-radius: 4px;
 }
 
+.titulo{
+  text-transform: uppercase;
+  text-align: center;
+  line-height: 20px;
+  font-family: 'Fjalla One', sans-serif;
+  font-weight: bold;
+  letter-spacing: 1px;
+  background-attachment: fixed;
+  text-shadow: 1px 1px #221e1f;
+}
+#underline, h1{
+  text-decoration-line: underline;
+}
+#nos{
+  border-radius: 40%;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 50%;
+  width: 270px
+}
