--- a/siteDesafio/style.css
+++ b/siteDesafio/style.css
@@ -64,7 +64,7 @@ img.logo {
   background-attachment: fixed;
   text-shadow: 1px 1px #221e1f;
 }
-#underline, h1{
+h1{
   text-decoration-line: underline;
 }
 #nos{
