--- a/siteDesafio/style.css
+++ b/siteDesafio/style.css
@@ -7,14 +7,14 @@ background-color: #faf6ed;
 ul{
   list-style: none;
   display: flex;
-  padding-left: 30px;
+  padding-left: 20px;
 }
 
 header {
 background-color: #221e1f;
 display: flex;
 flex-direction: row;
-max-height: 100px;
+max-height: 90px;
 background-attachment: fixed;
 position: sticky;
 top: 0px;
@@ -31,18 +31,16 @@ li {
   font-weight: normal;
   font-family: 'Anton', sans-serif;
   letter-spacing: 0.45px;
-  margin: 10px 0px 0px 8px;
+  margin-top: auto;
   display: inline-flex;
   text-transform: uppercase;
   align-content: center;
 }
 
 img.logo {
-  max-width: 95px;
+  max-width: 90px;
   margin-left: 5px;
-  margin-right: 0px;
   border-radius: 50%;
-  border: 2px solid #221e1f;
 }
 
 .menu a:hover{
@@ -95,20 +93,5 @@ h1{
   width: 50px;
 }
 hr{
-  height: 20px;
   color: #221e1f;
-
-}
-.mapouter {
-  position: relative;
-  text-align: right;
-  height: 500px;
-  width: 600px;
-}
-
-.gmap_canvas {
-  overflow: hidden;
-  background: none !important;
-  height: 500px;
-  width: 600px;
 }
