--- a/siteDesafio/style.css
+++ b/siteDesafio/style.css
@@ -12,26 +12,27 @@ ul{
 
 header {
 background-color: #221e1f;
-display: flex;
+display: grid;
+place-items: center;
 flex-direction: row;
-max-height: 90px;
+max-height: 135px;
 background-attachment: fixed;
-position: sticky;
-top: 0px;
 }
+
 
 a:any-link{
   text-decoration: none;
   background-color: transparent;
-  color: white;
+  color:white;
 }
 
-li {
+.menu li {
   font-size: 19px;
   font-weight: normal;
   font-family: 'Anton', sans-serif;
   letter-spacing: 0.45px;
-  margin-top: auto;
+  margin-top: 0px;
+  margin-right: 10px;
   display: inline-flex;
   text-transform: uppercase;
   align-content: center;
@@ -94,4 +95,61 @@ h1{
 }
 hr{
   color: #221e1f;
+}
+.redes-sociais ul,h2{
+  font-family: 'Fjalla One';
+  color: #221e1f;
+  display: grid;
+  place-items: center;
+}
+.redes-sociais img{
+  width: 150px;
+}
+
+#infoLocacao{
+  text-align: center;
+  font-family: 'Fjalla One';
+}
+.footer{
+  background-color: #221e1f;
+}
+
+.footer-title{
+  color: #faf6ed;
+  padding-top: 1em;
+  padding-left: 1em;  
+  font-size: 20px;
+  font-family: 'Roboto', sans-serif;
+  margin: 0px;
+}
+
+.footer-paymentmethod{
+  text-align: end;
+  color: #faf6ed ;
+}
+
+article{
+  margin-left: 30px;
+  margin-right: 30px;
+}
+.partner {
+  font-family: 'Roboto', sans-serif;
+  text-align: center;
+  font-size: 12px;
+}
+.partner-images{
+  width: 50px;
+}
+.footer-list li{
+margin-right: 25px;
+text-align: center;
+}
+
+h6{
+  color: #faf6ed;
+  text-align: center;
+  font-size: 15px;
+  font-family: 'Roboto', sans-serif;
+  margin: 0px;
+  padding: 0px;
 }
